Mon Dec  5 15:32:37 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * docs/USAGE:

          Removed obsolete note about a default -type.

Mon Dec  5 15:17:04 UTC 2011  Chad Elliott  <elliott_c@ociweb.com>

        * modules/Creator.pm:
        * modules/TemplateParser.pm:

          Fixed a bug where the inner-most template scope was usable at any
          given point within a template.  Thanks to Adam Mitz for helping me
          debug this and to Holger Schönstedt for bringing this to my
          attention.

        * docs/templates/make.txt:
        * templates/make.mpd:
        * templates/makedll.mpt:

          Added a 'ccflags' template variable to allow users to specify C++
          compiler options and a 'notparallel' template variable to allow
          users to control whether or not a .NOTPARALLEL is added to the
          makefile.

        * templates/wix.mpd:

          Fixed whitespace.

Wed Nov 30 21:33:46 UTC 2011  Trevor Fields  <fields_t@ociweb.com>

        * rpm/buildrpm.sh:

          Fixes to correctly gather packager information.
          Changes so rpm can be built by non root user.

Mon Nov  7 15:37:29 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * docs/README:

          Typo fix.

Thu Nov  3 12:00:45 UTC 2011  Chad Elliott  <elliott_c@ociweb.com>

        * docs/html/MakeProjectCreator.html:

          Corrected the list of options ignored by the workspace 'cmdline'
          setting.

Wed Nov  2 21:06:18 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * templates/wix.mpd:

          Added support for processing projects with custom_only set.

Wed Oct 19 19:11:50 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * config/openmp.mpb:

          Base project for openmp.

Mon Oct 17 18:33:05 UTC 2011  Chad Elliott  <elliott_c@ociweb.com>

        * templates/make.mpd:
        * docs/templates/make.txt:

          Define CFLAGS, but only if the 'cflags' template variable has been
          defined.
